objects/CustomListView__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ColumnOrder__c</fullName>
        <label>ColumnOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escape_Output__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escape Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FielApiName__c</fullName>
        <label>FielApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldLabel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefaultSortField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefaultSortField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortByFieldAPI__c</fullName>
        <label>SortByFieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewType__c</fullName>
        <label>ViewType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enableCharFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enableCharFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>makeLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>makeRecordLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>makeVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>makeVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>referenceField__c</fullName>
        <label>referenceField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CustomListView</label>
</CustomObject>